added client service in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     command: npm start
     env_file:
      - project.env
+    volumes:
+      - ./:/www/
   client:
     build:
       context: .
@@ -12,3 +14,5 @@ services:
     command: node bin/client_test.js
     env_file:
      - project.env
+    volumes:
+      - ./:/www/
