--- a/package.json
+++ b/package.json
@@ -69,14 +69,18 @@
     "url": "git://github.com/bcoe/thumbd.git"
   },
   "dependencies": {
+    "@sinonjs/formatio": "^2.0.0",
     "async": "^0.9.0",
-    "aws-sdk": "^2.1.18",
-    "knox": "^0.9.2",
+    "aws-sdk": "^2.267.1",
+    "ejs": "^2.6.1",
+    "knox-s3": "^0.9.5",
     "lodash": "^3.3.1",
+    "minimatch": "^3.0.4",
     "ndm": "^3.3.1",
     "request": "^2.40.0",
     "sprintf-js": "^1.0.2",
     "tmp": "~0.0.16",
+    "uuid": "^3.3.2",
     "yargs": "^3.4.5"
   },
   "devDependencies": {
